--- a/semiproject/src/main/resources/application.properties
+++ b/semiproject/src/main/resources/application.properties
@@ -4,8 +4,8 @@ server.port=8080
 # database setting
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=kh11
-spring.datasource.password=kh11
+spring.datasource.username=kh11b
+spring.datasource.password=kh11b
 
 # DBCP(DataBase Connection Pool)
 spring.datasource.dbcp2.max-total=20
