--- a/semiproject/bin/src/main/resources/application.properties
+++ b/semiproject/bin/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=8080
 
 # database setting
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=kh11
-spring.datasource.password=kh11
+spring.datasource.url=jdbc:oracle:thin:@khds-c.iptime.org:15212:xe
+spring.datasource.username=kh11b
+spring.datasource.password=kh11b
 
 # DBCP(DataBase Connection Pool)
 spring.datasource.dbcp2.max-total=20
