--- a/semiproject/src/main/resources/application.properties
+++ b/semiproject/src/main/resources/application.properties
@@ -27,3 +27,6 @@ spring.mvc.throw-exception-if-no-handler-found=true
 # static resource path setting
 spring.mvc.static-path-pattern=/static/**
 spring.web.resources.static-locations=classpath:/static/
+
+# custom setting
+custom.fileupload.path=D:/upload
