--- a/semiproject/src/main/resources/application.properties
+++ b/semiproject/src/main/resources/application.properties
@@ -27,3 +27,10 @@ spring.mvc.throw-exception-if-no-handler-found=true
 # static resource path setting
 spring.mvc.static-path-pattern=/static/**
 spring.web.resources.static-locations=classpath:/static/
+
+# custom settings
+#custom.fileupload.path=C:/저장경로/upload
+custom.email.host=smtp.gmail.com
+custom.email.port=587
+custom.email.username=khsemi11@gmail.com
+custom.email.password=cunvbatazjxihhyy
