파일 경로 수정

--- a/semiproject/src/main/resources/application.properties
+++ b/semiproject/src/main/resources/application.properties
@@ -32,7 +32,7 @@ spring.web.resources.static-locations=classpath:/static/
 custom.fileupload.path=D:/upload
 
 # custom settings
-#custom.fileupload.path=C:/저장경로/upload
+#custom.fileupload.path=C:/upload path/upload
 custom.email.host=smtp.gmail.com
 custom.email.port=587
 custom.email.username=khsemi11@gmail.com
