--- a/semiproject/bin/src/main/resources/application.properties
+++ b/semiproject/bin/src/main/resources/application.properties
@@ -1,23 +1,13 @@
 # server setting
 server.port=8080
+#server.servlet.context-path=/myformula
 
 # database setting
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-<<<<<<< HEAD
 spring.datasource.url=jdbc:oracle:thin:@khds-c.iptime.org:15212:xe
+#spring.datasource.url=jdbc:oracle:thin:@www.sysout.co.kr:1521:xe
 spring.datasource.username=kh11b
 spring.datasource.password=kh11b
-=======
-<<<<<<< HEAD
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=kh11
-spring.datasource.password=kh11
-=======
-spring.datasource.url=jdbc:oracle:thin:@khds-c.iptime.org:15212:xe
-spring.datasource.username=kh11b
-spring.datasource.password=kh11b
->>>>>>> refs/remotes/origin/main
->>>>>>> refs/remotes/origin/main
 
 # DBCP(DataBase Connection Pool)
 spring.datasource.dbcp2.max-total=20
@@ -39,3 +29,13 @@ spring.mvc.throw-exception-if-no-handler-found=true
 # static resource path setting
 spring.mvc.static-path-pattern=/static/**
 spring.web.resources.static-locations=classpath:/static/
+
+# custom setting
+custom.fileupload.path=D:/upload/kh11b
+
+# custom settings
+#custom.fileupload.path=C:/upload path/upload
+custom.email.host=smtp.gmail.com
+custom.email.port=587
+custom.email.username=khsemi11@gmail.com
+custom.email.password=cunvbatazjxihhyy
