--- a/semiproject/src/main/resources/application.properties
+++ b/semiproject/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 # server setting
-server.port=8080
+server.port=80
+server.servlet.context-path=/welcome
 
 # database setting
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@khds-c.iptime.org:15212:xe
+#spring.datasource.url=jdbc:oracle:thin:@www.sysout.co.kr:15212:xe
 spring.datasource.username=kh11b
 spring.datasource.password=kh11b
 
