--- a/semiproject/src/main/resources/application.properties
+++ b/semiproject/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 # server setting
-server.port=8080
+server.port=80
+server.servlet.context-path=/main
 
 # database setting
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@khds-c.iptime.org:15212:xe
+#spring.datasource.url=jdbc:oracle:thin:@www.sysout.co.kr:15212:xe
 spring.datasource.username=kh11b
 spring.datasource.password=kh11b
 
@@ -29,7 +31,7 @@ spring.mvc.static-path-pattern=/static/**
 spring.web.resources.static-locations=classpath:/static/
 
 # custom setting
-custom.fileupload.path=D:/upload
+custom.fileupload.path=D:/upload/kh11b
 
 # custom settings
 #custom.fileupload.path=C:/upload path/upload
