--- a/semiproject/src/main/resources/application.properties
+++ b/semiproject/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # server setting
-server.port=80
-server.servlet.context-path=/main
+server.port=8080
+#server.servlet.context-path=/main
 
 # database setting
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
