--- a/semiproject/src/main/resources/application.properties
+++ b/semiproject/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # server setting
-server.port=80
-server.servlet.context-path=/welcome
+server.port=8080
+#server.servlet.context-path=/myformula
 
 # database setting
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
@@ -31,7 +31,7 @@ spring.mvc.static-path-pattern=/static/**
 spring.web.resources.static-locations=classpath:/static/
 
 # custom setting
-custom.fileupload.path=D:/upload
+custom.fileupload.path=C:/upload/kh11b
 
 # custom settings
 #custom.fileupload.path=C:/upload path/upload
