--- a/semiproject/src/main/resources/application.properties
+++ b/semiproject/src/main/resources/application.properties
@@ -4,8 +4,8 @@ server.servlet.context-path=/myformula
 
 # database setting
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-#spring.datasource.url=jdbc:oracle:thin:@khds-c.iptime.org:15212:xe
-spring.datasource.url=jdbc:oracle:thin:@www.sysout.co.kr:1521:xe
+spring.datasource.url=jdbc:oracle:thin:@khds-c.iptime.org:15212:xe
+#spring.datasource.url=jdbc:oracle:thin:@www.sysout.co.kr:1521:xe
 spring.datasource.username=kh11b
 spring.datasource.password=kh11b
 
