고건우 경로 수정

--- a/semiproject/src/main/resources/application.properties
+++ b/semiproject/src/main/resources/application.properties
@@ -31,7 +31,7 @@ spring.mvc.static-path-pattern=/static/**
 spring.web.resources.static-locations=classpath:/static/
 
 # custom setting
-custom.fileupload.path=C:/upload/kh11b
+custom.fileupload.path=D:/upload/kh11b
 
 # custom settings
 #custom.fileupload.path=C:/upload path/upload
